@@ -1005,7 +1005,7 @@ extract-gems: PHONY
 	    bundled_gems
 
 ### set the following environment variable or uncomment the line if
-### the Unicode data files are updated every minute.
+### the Unicode data files should be updated completely on every update ('make up',...).
 # ALWAYS_UPDATE_UNICODE = yes
 
 UNICODE_FILES = $(srcdir)/enc/unicode/data/$(UNICODE_VERSION)/UnicodeData.txt \
@@ -1013,11 +1013,9 @@ UNICODE_FILES = $(srcdir)/enc/unicode/data/$(UNICODE_VERSION)/UnicodeData.txt \
 		$(srcdir)/enc/unicode/data/$(UNICODE_VERSION)/NormalizationTest.txt \
 		$(srcdir)/enc/unicode/data/$(UNICODE_VERSION)/CaseFolding.txt
 
-UNICODE_FILES_DEPS = $(srcdir)/.unicode-$(UNICODE_VERSION).time
+update-unicode: $(UNICODE_FILES)
 
-update-unicode: $(srcdir)/.unicode-$(UNICODE_VERSION).time PHONY
-
-$(UNICODE_FILES_DEPS):
+$(UNICODE_FILES):
 	$(ECHO) Downloading Unicode $(UNICODE_VERSION) data files...
 	$(Q) $(MAKEDIRS) "$(srcdir)/enc/unicode/data/$(UNICODE_VERSION)"
 	$(Q) $(BASERUBY) -C "$(srcdir)" tool/downloader.rb \
@@ -1025,13 +1023,12 @@ $(UNICODE_FILES_DEPS):
 	    -p $(UNICODE_VERSION)/ucd \
 	    -e $(ALWAYS_UPDATE_UNICODE:yes=-a) unicode \
 	    $(UNICODE_FILES)
-	@exit > $@
 
 $(srcdir)/$(HAVE_BASERUBY:yes=lib/unicode_normalize/tables.rb): \
 	$(srcdir)/.unicode-tables.time
 
 $(srcdir)/.unicode-tables.time: $(srcdir)/tool/generic_erb.rb \
-		$(UNICODE_FILES_DEPS) \
+		$(UNICODE_FILES) \
 		$(srcdir)/template/unicode_norm_gen.tmpl
 	$(Q) $(BASERUBY) $(srcdir)/tool/generic_erb.rb \
 		-c -t$@ -o $(srcdir)/lib/unicode_normalize/tables.rb \
