@@ -1,3 +1,8 @@
+Sun Jan 24 18:12:36 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
+
+	* common.mk: Simplifying Unicode data file download logic to make
+	  it more reliable (including additional fix not in r53633) [Bug #12007]
+
 Sun Jan 24 16:54:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/io/wait/wait.c (io_wait_readwrite): [EXPERIMENTAL] allow to
